--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mainContainer {
+  margin: 0 auto;
+  color: #FEF8FA;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.contentContainer {
+  width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.btn {
+  margin: 5px 0;
+}
